--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ActivateEd</title>
+  <meta name="description" content="Personalized tutoring and immersive courses for every grade and every goal. Explore services, parent stories, and our research-based curriculum." />
 
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@9/swiper-bundle.min.css" />
@@ -15,11 +16,12 @@
   <!-- HEADER / NAV -->
   <header class="glass-nav">
     <div class="nav-wrap container">
-      <a href="index.html" class="brand logo">Activate<span>Ed</span></a>
+      <a href="index.html" class="brand logo" aria-label="ActivateEd Home">Activate<span>Ed</span></a>
+
       <button id="burger" aria-label="Menu"><span></span></button>
 
-      <nav class="desktop-nav" id="mainNav">
-        <a class="active" href="index.html">Home</a>
+      <nav class="desktop-nav" id="mainNav" aria-label="Primary">
+        <a class="active" href="index.html" aria-current="page">Home</a>
         <a href="services.html">Services</a>
         <a href="approach.html">Curriculum</a>
         <a href="stories.html">Stories</a>
@@ -33,9 +35,9 @@
 
   <main>
     <!-- HERO -->
-    <section id="hero" class="hero reveal">
+    <section id="hero" class="hero reveal" aria-labelledby="hero-title">
       <div class="hero-inner container">
-        <h1 class="headline">
+        <h1 id="hero-title" class="headline">
           Unlock <span class="gradient-text" id="typewriter"></span>.
         </h1>
         <p class="subhead">
@@ -46,74 +48,75 @@
     </section>
 
     <!-- SERVICES PREVIEW -->
-    <section id="services" class="hero-simple reveal">
+    <section id="services" class="hero-simple reveal" aria-labelledby="services-title">
       <div class="container">
-        <h2 class="section-title">Our Services</h2>
+        <h2 class="section-title" id="services-title">Our Services</h2>
         <p class="subhead">
           Explore our tailored programs designed to unlock your child's full potential.
         </p>
 
-        <div class="grid cards">
+        <div class="grid cards" role="list">
           <!-- Active Learning -->
-          <div class="card pop reveal">
-            <img src="images/activelearning.png" alt="Active Learning" />
+          <article class="card pop reveal" role="listitem">
+            <img src="images/activelearning.png" alt="Active Learning icon" loading="lazy" />
             <h3>Active Learning</h3>
             <p>
-              In-home, one-to-one tutoring for primary students in reading, writing and
-              mathematics—tailored lessons that make learning engaging &amp; effective.
+              In-home, one-to-one tutoring for primary students in reading, writing, and
+              mathematics—tailored lessons that make learning engaging and effective.
             </p>
-            <a href="services.html#activelearning" class="arrow-link underline">Learn more →</a>
-          </div>
+            <a href="services.html#activelearning" class="arrow-link underline" aria-label="Learn more about Active Learning">Learn more →</a>
+          </article>
 
           <!-- Middle School Mastery -->
-          <div class="card pop reveal">
-            <img src="images/middle school.png" alt="Middle School Mastery" />
+          <article class="card pop reveal" role="listitem">
+            <img src="images/middle school.png" alt="Middle School Mastery icon" loading="lazy" />
             <h3>Middle School Mastery</h3>
             <p>
               Personalized instruction across all subjects, plus expert Regents, TACHS,
               ISEE &amp; SSAT exam preparation.
             </p>
-            <a href="services.html#middleschool" class="arrow-link underline">Learn more →</a>
-          </div>
+            <a href="services.html#middleschool" class="arrow-link underline" aria-label="Learn more about Middle School Mastery">Learn more →</a>
+          </article>
 
-          <!-- High-School Success -->
-          <div class="card pop reveal">
-            <img src="images/highschool.png" alt="High-School Success" />
-            <h3>High-School Success</h3>
+          <!-- High School Success -->
+          <article class="card pop reveal" role="listitem">
+            <img src="images/highschool.png" alt="High School Success icon" loading="lazy" />
+            <h3>High School Success</h3>
             <p>
-              Personalized academic coaching in every subject, Regents review and
+              Personalized academic coaching in every subject, Regents review, and
               AP-exam support for grades 9–12.
             </p>
-            <a href="services.html#highschool" class="arrow-link underline">Learn more →</a>
-          </div>
+            <a href="services.html#highschool" class="arrow-link underline" aria-label="Learn more about High School Success">Learn more →</a>
+          </article>
 
           <!-- Elite College Test Prep -->
-          <div class="card pop reveal">
-            <img src="images/testprep.png" alt="Elite College Test Prep" />
+          <article class="card pop reveal" role="listitem">
+            <img src="images/testprep.png" alt="Elite College Test Prep icon" loading="lazy" />
             <h3>Elite College Test Prep</h3>
             <p>
               Comprehensive PSAT, SAT &amp; ACT preparation with personalized study
-              plans, practice exams and expert feedback.
+              plans, practice exams, and expert feedback.
             </p>
-            <a href="services.html#testprep" class="arrow-link underline">Learn more →</a>
-          </div>
+            <a href="services.html#testprep" class="arrow-link underline" aria-label="Learn more about Elite College Test Prep">Learn more →</a>
+          </article>
         </div>
       </div>
     </section>
 
     <!-- CURRICULUM TEASER -->
-    <section id="curriculum" class="hero-simple reveal">
+    <section id="curriculum" class="hero-simple reveal" aria-labelledby="curriculum-title">
       <div class="container" style="text-align:center">
-        <h2 class="section-title">Our Curriculum</h2>
+        <h2 class="section-title" id="curriculum-title">Our Curriculum</h2>
         <p class="subhead">Structured, multisensory lessons that build skills quickly and clearly.</p>
-        <a href="approach.html" class="btn primary large">Explore the Curriculum</a>
+        <a href="approach.html" class="btn primary large" aria-label="Explore our Curriculum">Explore the Curriculum</a>
       </div>
     </section>
 
     <!-- TESTIMONIALS PREVIEW -->
-    <section id="testimonials" class="testimonials reveal">
-      <div class="container section-title">Parent Stories</div>
-      <div class="swiper" id="testimonialSwiper">
+    <section id="testimonials" class="testimonials reveal" aria-labelledby="stories-title">
+      <h2 class="section-title container" id="stories-title">Parent Stories</h2>
+
+      <div class="swiper" id="testimonialSwiper" aria-label="Parent testimonials">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <blockquote>
@@ -134,8 +137,9 @@
             </blockquote>
           </div>
         </div>
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination" aria-hidden="true"></div>
       </div>
+
       <div style="text-align:center; margin-top:1.8rem">
         <a href="stories.html" class="btn ghost large">Read More Stories</a>
       </div>
@@ -146,10 +150,10 @@
   <footer class="footer">
     <div class="container footer-inner">
       <div>© 2025 ActivateEd</div>
-      <ul class="socials">
-        <li><a href="#"><img src="images/x-logo.png" alt="X"></a></li>
-        <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook"></a></li>
-        <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram"></a></li>
+      <ul class="socials" aria-label="Social media">
+        <li><a href="#"><img src="images/x-logo.png" alt="X (formerly Twitter)" loading="lazy"></a></li>
+        <li><a href="#"><img src="images/facebook-logo.png" alt="Facebook" loading="lazy"></a></li>
+        <li><a href="#"><img src="images/Instagram_icon.png" alt="Instagram" loading="lazy"></a></li>
       </ul>
     </div>
   </footer>
